Enabled linking waypoints to pins on the map.

--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -66,8 +66,8 @@ page_nav: 'map-melville-rome'
         <!-- <div class="project-notes">
         </div> -->
 
-        {% for route in events %}
         {% assign i = 0 %}
+        {% for route in events %}
         <table border="0" cellpadding="0" cellspacing="0" class="year">
             <tr>
                 <th><h3>Route {{ route.name }}</h3></th>
@@ -86,15 +86,15 @@ page_nav: 'map-melville-rome'
             </tr></thead>
 
             {% for event in route.items %}
-            {% if event.type == 'w' %}{% assign i = i| plus:'1' %}{% endif %}
-            <tr class="{% cycle 'odd', 'even' %} parish-{{ event.parish_id }}">
+            {% if event.type == 'w' and event.latitude != null %}{% assign i = i| plus:'1' %}{% endif %}
+            <tr class="{% cycle 'odd', 'even' %}">
                 <td>{% if event.type == 'w' %}{{ i }}{% endif %}</td>
                 <td class="date" id="event-{{ i }}">{% if event.type == 'w' %}{{ event.display_date }}{% endif %}</td>
-                <td td class="waypoint">{% if event.type == 'w' %}<a href="#">{{ event.waypoint }}</a>{% if event.city %}<br />({{ event.city }}){% endif %}{% endif %}</td>
-                <td class="location">{% if event.type == 'l' %}{{ event.observed }}{% endif %}</td>
-                <td class="observation">{% if event.type == 'o' %}{{ event.observed }}{% endif %}</td>
-                <td class="coords">{% if event.latitude != null %}{{ event.latitude }}{% else %}##.#####{% endif %}, {% if event.longitude != null %}{{ event.longitude }}{% else %}##.#####{% endif %}</td>
-                <td class="text">{{ event.text }}</td>
+                <td td class="waypoint">{% if event.type == 'w' %}<a href="#" data-waypoint-id="waypoint-{{ i }}">{{ event.waypoint }}</a>{% if event.city %}<br />({{ event.city }}){% endif %}{% endif %}</td>
+                <td class="location" data-waypoint-id="waypoint-{{ i }}">{% if event.type == 'l' %}{{ event.observed }}{% endif %}</td>
+                <td class="observation" data-waypoint-id="waypoint-{{ i }}">{% if event.type == 'o' %}{{ event.observed }}{% endif %}</td>
+                <td class="coords" data-waypoint-id="waypoint-{{ i }}">{% if event.latitude != null %}{{ event.latitude }}{% else %}##.#####{% endif %}, {% if event.longitude != null %}{{ event.longitude }}{% else %}##.#####{% endif %}</td>
+                <td class="text" data-waypoint-id="waypoint-{{ i }}">{{ event.text }}</td>
                 <td class="editorial">{% if event.editorial %}{{ event.editorial }}{% else %}&#160;{% endif %}</td>
             </tr>
             {% endfor %}
