--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -69,7 +69,7 @@ page_nav: 'map-melville-rome'
         {% for route in events %}
         <table border="0" cellpadding="0" cellspacing="0" class="year">
             <tr>
-                <th><h3>Route {{ route.name }}</h3></th>
+                <th><h3>Day {{ route.name }}</h3></th>
             </tr>
         </table>
         <div class="data-table"><table border="0" cellpadding="0" cellspacing="0" width="100%" class="responsive data">
