Tweak to toggle label in paths UI

--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -58,21 +58,21 @@ page_nav: 'map-melville-rome'
         <div class="day">
             <h3>Day 1</h3>
             <ul>
-                <li><label><input type="checkbox" /> Primary path</label></li>
+                <li><label><input type="checkbox" /> Primary route</label></li>
                 <li><label><input type="checkbox" /> Alternate paths</label></li>
             </ul>
         </div>
         <div class="day">
             <h3>Day 2</h3>
             <ul>
-                <li><label><input type="checkbox" checked="checked" /> Primary path</label></li>
+                <li><label><input type="checkbox" checked="checked" /> Primary route</label></li>
                 <li><label><input type="checkbox" /> Alternate paths</label></li>
             </ul>
         </div>
         <div class="day">
             <h3>Day 3</h3>
             <ul>
-                <li><label><input type="checkbox" /> Primary path</label></li>
+                <li><label><input type="checkbox" /> Primary route</label></li>
                 <li><label><input type="checkbox" /> Alternate paths</label></li>
             </ul>
         </div>
