Pushing itinerary & route/path updates to server.

--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -76,6 +76,13 @@ page_nav: 'map-melville-rome'
                 <li><label><input type="checkbox" /> Alternate paths</label></li>
             </ul>
         </div>
+        <div class="day">
+            <h3>Day 4</h3>
+            <ul>
+                <li><label><input type="checkbox" /> Primary route</label></li>
+                <li><label><input type="checkbox" /> Alternate paths</label></li>
+            </ul>
+        </div>
         <br style="clear:both;" />
     </div>
     <div class="itinerary">
