--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -55,24 +55,24 @@ page_nav: 'map-melville-rome'
 <div class="wrapper">
     <div id="path-nav">
         <h2>Routes Taken</h2>
-        <div class="day">
+        <div class="day" style="opacity: .5;">
             <h3>Day 1</h3>
             <ul>
-                <li><label><input type="checkbox" /> Primary route</label></li>
-                <li><label><input type="checkbox" /> Alternate paths</label></li>
+                <li><label><input type="checkbox" readonly="true" /> Primary route</label></li>
+                <li><label><input type="checkbox" readonly="true" /> Alternate paths</label></li>
             </ul>
         </div>
-        <div class="day">
+        <div class="day" style="opacity: .5;">
             <h3>Day 2</h3>
             <ul>
-                <li><label><input type="checkbox" checked="checked" /> Primary route</label></li>
-                <li><label><input type="checkbox" /> Alternate paths</label></li>
+                <li><label><input type="checkbox" readonly="true" /> Primary route</label></li>
+                <li><label><input type="checkbox" readonly="true" /> Alternate paths</label></li>
             </ul>
         </div>
         <div class="day">
             <h3>Day 3</h3>
             <ul>
-                <li><label><input type="checkbox" /> Primary route</label></li>
+                <li><label><input type="checkbox" checked="checked" /> Primary route</label></li>
                 <li><label><input type="checkbox" /> Alternate paths</label></li>
             </ul>
         </div>
