Path toggles: ENABLED!

--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -72,15 +72,15 @@ page_nav: 'map-melville-rome'
         <div class="day">
             <h3>Day 3</h3>
             <ul>
-                <li><label><input type="checkbox" checked="checked" /> Primary route</label></li>
-                <li><label><input type="checkbox" /> Alternate paths</label></li>
+                <li><label><input class="path-toggle" type="checkbox" data-route="3" data-primary="1" checked="checked" /> Primary route</label></li>
+                <li><label><input class="path-toggle" type="checkbox" data-route="3" data-primary="0" checked="checked" /> Alternate paths</label></li>
             </ul>
         </div>
         <div class="day">
             <h3>Day 4</h3>
             <ul>
-                <li><label><input type="checkbox" /> Primary route</label></li>
-                <li><label><input type="checkbox" /> Alternate paths</label></li>
+                <li><label><input class="path-toggle" type="checkbox" data-route="4" data-primary="1" checked="checked" /> Primary route</label></li>
+                <li><label><input class="path-toggle" type="checkbox" data-route="4" data-primary="0" checked="checked" /> Alternate paths</label></li>
             </ul>
         </div>
         <br style="clear:both;" />
