Removed _site from .gitignore so that it can be referenced on GitHub.

--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -60,7 +60,7 @@ page_nav: 'map-melville-rome'
             <ul>
                 <li><label><input type="checkbox" readonly="true" /> Primary route</label></li>
                 <li><label><input type="checkbox" readonly="true" /> Alternate paths</label></li>
-                <li><label><input type="checkbox" readonly="true" /> Waypoints</label></li>
+                {% comment %}<li><label><input type="checkbox" readonly="true" /> Waypoints</label></li>{% endcomment %}
             </ul>
         </div>
         <div class="day" style="opacity: .5;">
@@ -68,7 +68,7 @@ page_nav: 'map-melville-rome'
             <ul>
                 <li><label><input type="checkbox" readonly="true" /> Primary route</label></li>
                 <li><label><input type="checkbox" readonly="true" /> Alternate paths</label></li>
-                <li><label><input type="checkbox" readonly="true" /> Waypoints</label></li>
+                {% comment %}<li><label><input type="checkbox" readonly="true" /> Waypoints</label></li>{% endcomment %}
             </ul>
         </div>
         <div class="day">
@@ -76,7 +76,7 @@ page_nav: 'map-melville-rome'
             <ul>
                 <li><label><input class="path-toggle" type="checkbox" data-route="3" data-primary="1" checked="checked" /> Primary route</label></li>
                 <li><label><input class="path-toggle" type="checkbox" data-route="3" data-primary="0" checked="checked" /> Alternate paths</label></li>
-                <li><label><input class="waypoint-toggle" type="checkbox" data-route="3" checked="checked" /> Waypoints</label></li>
+                {% comment %}<li><label><input class="waypoint-toggle" type="checkbox" data-route="3" checked="checked" /> Waypoints</label></li>{% endcomment %}
             </ul>
         </div>
         <div class="day">
@@ -84,7 +84,7 @@ page_nav: 'map-melville-rome'
             <ul>
                 <li><label><input class="path-toggle" type="checkbox" data-route="4" data-primary="1" checked="checked" /> Primary route</label></li>
                 <li><label><input class="path-toggle" type="checkbox" data-route="4" data-primary="0" checked="checked" /> Alternate paths</label></li>
-                <li><label><input class="waypoint-toggle" type="checkbox" data-route="4" checked="checked" /> Waypoints</label></li>
+                {% comment %}<li><label><input class="waypoint-toggle" type="checkbox" data-route="4" checked="checked" /> Waypoints</label></li>{% endcomment %}
             </ul>
         </div>
         <br style="clear:both;" />
